Fix misalignment

--- a/css/main.css
+++ b/css/main.css
@@ -226,10 +226,17 @@ label.nav-label::before {
 }
 
 .nav-open {
-  z-index: 2;
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  z-index: 3;
 }
 
 .nav-close {
+  display: none;
+  position: fixed;
+  top: 15px;
+  right: 15px;
   z-index: 3;
 }
 
